templates/boundary-softsci_template.yaml
---
# Source: boundary-softsci/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boundary-0
  labels:
    helm.sh/chart: boundary-softsci-0.2.4
    app: boundary
    service: boundary
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.7.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: api
      protocol: TCP
      name: api
    - port: 9201
      targetPort: cluster
      protocol: TCP
      name: cluster
  selector:
    app: boundary
    service: boundary
    app.kubernetes.io/instance: release-name
---
# Source: boundary-softsci/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boundary-1
  labels:
    helm.sh/chart: boundary-softsci-0.2.4
    app: boundary
    service: boundary
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.7.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 9202
      targetPort: data
      nodePort: 30202
      protocol: TCP
      name: data
  selector:
    app: boundary
    service: boundary
    app.kubernetes.io/instance: release-name
---
# Source: boundary-softsci/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boundary
  labels:
    helm.sh/chart: boundary-softsci-0.2.4
    app: boundary
    service: boundary
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.7.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boundary
      service: boundary
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "false"
      labels:
        app: boundary
        service: boundary
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: boundary
      securityContext:
        {}
      containers:
        - name: boundary-softsci
          command:
            - /bin/sh
            - "-c"
          args:
            - boundary server -config /boundary/boundary-config.hcl
          volumeMounts:
            - name: boundary-config
              mountPath: /boundary
              readOnly: true
          securityContext:
            {}
          image: "hashicorp/boundary:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 9200
              protocol: TCP
            - name: cluster
              containerPort: 9201
              protocol: TCP
            - name: data
              containerPort: 9202
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: api
          readinessProbe:
            httpGet:
              path: /
              port: api
          resources:
            {}
      volumes:
        - name: boundary-config
          configMap:
            name: boundary-config
---
# Source: boundary-softsci/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boundary
  labels:
    helm.sh/chart: boundary-softsci-0.2.4
    app: boundary
    service: boundary
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.7.1"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: "boundary.home.lan"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: boundary-0
                port:
                  name: api
